--- a/package.json
+++ b/package.json
@@ -15,6 +15,15 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.29.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-vue": "^7.12.1",
     "node-sass": "^5.0.0",
     "postcss": "^8.3.5",
     "sass-loader": "^10.1.1"
